--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ol>
             <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
             <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
-            <li>HTML and CSS constructs for representing musical scores.</li>
+            <li><abbr title="Hyper Text Mark up Language">HTML</abbr> and<abbr title="Cascade sheet"></abbr> CSS constructs for representing musical scores.</li>
         </ol>
         So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
     </p>
@@ -81,7 +81,7 @@
         Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:
         <dl>
             <dt>Polynesian chicken dance</dt>
-            <dd>A little known but very influential dance dating back as far as 300<abbr title="Before Christ">BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
+            <dd>A little known but very influential dance dating back as far as 300 BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
 
             <dt>Icelandic brownian shuffle</dt>
             <dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
