--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ol>
             <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
             <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
-            <li><abbr title="Hyper Text Mark up Language">HTML</abbr> and<abbr title="Cascade sheet"></abbr> CSS constructs for representing musical scores.</li>
+            <li><abbr title="Hyper Text Mark up Language">HTML</abbr> and<abbr title="Cascade sheet">CSS</abbr> constructs for representing musical scores.</li>
         </ol>
         So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
     </p>
